--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "nodemailer": "^6.8.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/express": "^4.17.15",
+    "@types/nodemailer": "^6.4.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4"
   }
